# pinot-connect

./: .gitignore  .tool-versions  404.html  CNAME  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pydoc_markdown.yml  pyproject.toml
.github/: integration-tests.yml
.github/workflows/: docs.yml  fmt.yml  integration-tests.yml  latest-changes.yml  unit-tests.yml
benchmarks/: index.html
docs/: benchmarks.md  index.md  release_notes.md
docs/reference/: connection.md  context.md  cursor.md  exceptions.md  index.md  options.md  pinot_connect.md  pypinot.md  rows.md
docs/usage/: basic.md  index.md  options.md  row_factories.md
pinot-config/: broker.conf  controller.conf  server.conf
pinot-data/: create_tables.py  task_owner_schema.json  task_owner_table.json  task_schema.json  task_table.json
pinot_connect/: __init__.py  _decorators.py  _query.py  _result_set.py  _type_converters.py  connection.py  context.py  cursor.py  exceptions.py  options.py  rows.py
reference/: index.html
reference/connection/: index.html
reference/context/: index.html
reference/cursor/: index.html
reference/exceptions/: index.html
reference/options/: index.html
reference/rows/: index.html
release_notes/: index.html
scripts/: generate_ref_docs.py  pinotdb_benchmarks.py
search/: search_index.json
tests/integration/: conftest.py  test_fetching_and_scrolling.py  test_param_binding.py  test_row_factories.py
tests/integration/cassettes/: TestASync.test_float_binding[select lat from starbucksStores where lat > %(latitude)s limit 10-params1].yaml  TestASync.test_float_binding[select lat from starbucksStores where lat > %s limit 10-params0].yaml  TestASync.test_int_binding[select AirTime from airlineStats where AirTime > %(air_time)s limit 10-params1].yaml  TestASync.test_int_binding[select AirTime from airlineStats where AirTime > %s limit 10-params0].yaml  TestAsync.test_datetime_binding[select created_at_timestamp from githubEvents where created_at_timestamp > %(ts)s limit 10-params1].yaml  TestAsync.test_datetime_binding[select created_at_timestamp from githubEvents where created_at_timestamp > %s limit 10-params0].yaml  TestAsync.test_dict_binding[select actor from githubEvents where actor = %(actor)s-params1].yaml  TestAsync.test_dict_binding[select actor from githubEvents where actor = %s-params0].yaml  TestAsync.test_dict_row_load_json_fields.yaml  TestAsync.test_float_binding[select lat from starbucksStores where lat > %(latitude)s limit 10-params1].yaml  TestAsync.test_float_binding[select lat from starbucksStores where lat > %s limit 10-params0].yaml  TestAsync.test_int_binding[select AirTime from airlineStats where AirTime > %(air_time)s limit 10-params1].yaml  TestAsync.test_int_binding[select AirTime from airlineStats where AirTime > %s limit 10-params0].yaml  TestAsync.test_sequence_binding[select teamName from dimBaseballTeams where teamID in %(teams)s-params1].yaml  TestAsync.test_sequence_binding[select teamName from dimBaseballTeams where teamID in %(teams)s-params3].yaml  TestAsync.test_sequence_binding[select teamName from dimBaseballTeams where teamID in %(teams)s-params5].yaml  TestAsync.test_sequence_binding[select teamName from dimBaseballTeams where teamID in %s-params0].yaml  TestAsync.test_sequence_binding[select teamName from dimBaseballTeams where teamID in %s-params2].yaml  TestAsync.test_sequence_binding[select teamName from dimBaseballTeams where teamID in %s-params4].yaml  TestAsync.test_str_binding[select type from githubEvents where type = %(event_type)s limit 10-params1].yaml  TestAsync.test_str_binding[select type from githubEvents where type = %s limit 10-params0].yaml  TestSync.test_datetime_binding[select created_at_timestamp from githubEvents where created_at_timestamp > %(ts)s limit 10-params1].yaml  TestSync.test_datetime_binding[select created_at_timestamp from githubEvents where created_at_timestamp > %s limit 10-params0].yaml  TestSync.test_dict_binding[select actor from githubEvents where actor = %(actor)s-params1].yaml  TestSync.test_dict_binding[select actor from githubEvents where actor = %s-params0].yaml  (+14 more)
tests/unit/: test_connection.py  test_cursor.py  test_decorators.py  test_options.py  test_query.py  test_result_set.py  test_rows.py  test_typer_converters.py
usage/: index.html
usage/basic/: index.html
usage/options/: index.html
usage/row_factories/: index.html
